--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 #title {
   width: 30%;
   border: none;
-  font-size: 100px;
-  color: rgba(220, 20, 20, 0.534);
+  font-size: 90px;
+  color: rgba(214, 46, 46, 0.534);
   margin: 50px;
   display: flex;
   justify-content: center;
@@ -15,17 +15,27 @@ body {
 }
 #cover {
   height: 100vh;
-  background-image: url(https://cdn.discordapp.com/attachments/1234127007122591745/1235856822070546482/1.gif?ex=6635e4db&is=6634935b&hm=927d81c1157ed1ae7c1f95909e2d6fe5b99e151ca6a2f5e407cab1cf11f91486&); /* 請替換為你想要的背景圖片 */
-  background-size: 1920px 1000px;
-  border: 2px solid black;
+  background-image:url('background.gif');
+  background-size: 99.9% 99.5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   color: #fff;
 }
-
+#cover-egg{
+  height: 100vh;
+  background-image:url('egg-background.gif');
+  background-size: 99.9% 99.5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 #start-button {
+  position: relative;
+  top: 5%;
+  left: 0%;
   padding: 15px 30px;
   font-size: 20px;
   background-color: #606870;
@@ -41,32 +51,73 @@ body {
 }
 
 #container {
-  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  position: fixed;
+  bottom: -50%;
+  width: 100%;
   margin: auto;
   height: 100%;
-  background-color: #555050;
+  background-color: #f2ebeb;
   border-radius: 10px;
   padding: 20px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-
+#egg-button {
+  background-color: transparent; 
+  border: none; 
+  width: 52px; 
+  height: 52px; 
+  position: relative; 
+  top: -28.9%; 
+  right: 23.7%; 
+}
 #scenario {
   margin-bottom: 100px;
 }
+.fade-in {
+  animation: fadeIn 1s ease-in-out;
+}
 
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 #options button {
-  display: block;
   margin-bottom: 10px;
   padding: 10px;
-  width: 100%;
+  width: calc(50% - 5px);
   border: none;
   border-radius: 5px;
-  background-color: #007bff;
+  background-color: #5e5f60;
   color: #fff;
   font-size: 16px;
   cursor: pointer;
 }
 
 #options button:hover {
-  background-color: #0056b3;
+  background-color: #3b3c3d;
+}
+#dialogue {
+  margin-bottom: 20px;
+  font-family: Arial, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: #ff0000;
+}
+.fade-in {
+  animation: fadeIn 1s ease-in-out forwards;
+}
+#scenario {
+  margin-bottom: 20px;
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+  color: #070707;
 }
